[gd_scene load_steps=3 format=3 uid="uid://b8xa8tkla8afo"]

[ext_resource type="Script" path="res://Scripts/DeathOverlay.gd" id="1_afppo"]
[ext_resource type="Theme" uid="uid://bufd87u2vo210" path="res://Theme/MyTheme.tres" id="1_q2x5p"]

[node name="DeathOverlay" type="CanvasLayer"]
script = ExtResource("1_afppo")

[node name="Root" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_q2x5p")
theme_override_constants/margin_left = 100
theme_override_constants/margin_top = 100
theme_override_constants/margin_right = 100
theme_override_constants/margin_bottom = 100

[node name="VBoxContainer" type="VBoxContainer" parent="Root"]
layout_mode = 2

[node name="GameOverLabel" type="Label" parent="Root/VBoxContainer"]
layout_mode = 2
text = "Game Over"
horizontal_alignment = 1

[node name="Control" type="Control" parent="Root/VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="Root/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="Root/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ScoreLabel" type="Label" parent="Root/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Points:"

[node name="DurationLabel" type="Label" parent="Root/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Duration:"

[node name="SlimesKilledLabel" type="Label" parent="Root/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Slimes killed:"

[node name="DragonsKilledLabel" type="Label" parent="Root/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Dragons killed:"

[node name="GhostsOutlivedLabel" type="Label" parent="Root/VBoxContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
text = "Ghost outlived:"

[node name="VBoxContainer2" type="VBoxContainer" parent="Root/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(300, 0)
layout_mode = 2

[node name="ScoreValue" type="Label" parent="Root/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "9999"
horizontal_alignment = 2

[node name="DurationValue" type="Label" parent="Root/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0s"
horizontal_alignment = 2

[node name="SlimesKilledValue" type="Label" parent="Root/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0s"
horizontal_alignment = 2

[node name="DragonsKilledValue" type="Label" parent="Root/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0s"
horizontal_alignment = 2

[node name="GhostsOutlivedValue" type="Label" parent="Root/VBoxContainer/HBoxContainer/VBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
text = "0s"
horizontal_alignment = 2

[node name="Control2" type="Control" parent="Root/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="Root/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RestartButton" type="Button" parent="Root/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Restart"

[node name="Control" type="Control" parent="Root/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(100, 0)
layout_mode = 2

[node name="MainMenuButton" type="Button" parent="Root/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Main Menu"

[connection signal="pressed" from="Root/VBoxContainer/HBoxContainer2/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="Root/VBoxContainer/HBoxContainer2/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
